<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/text_monthly_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:text="@string/your_monthly_budget"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_monthly_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_monthly_budget"
            android:layout_alignEnd="@id/text_monthly_budget"
            android:layout_alignParentLeft="true"
            android:text="@string/value_total_budget"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_total_spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/total_spent"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/val_total_spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_total_spent"
            android:layout_alignParentRight="true"
            android:text="@string/value_total_spent"
            android:textColor="@color/red"
            android:layout_alignStart="@id/text_total_spent"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/val_total_spent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            tools:text="You are doing great this month!" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_set_budget"
            android:layout_below="@+id/val_total_spent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/val_monthly_budget"
            app:layout_constraintRight_toRightOf="@id/val_total_spent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_set_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_history"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/set_your_budget"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:text="@string/history"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_add"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,SpeakableTextPresentCheck,VectorDrawableCompat" />
    </RelativeLayout>
</layout>
